Slightly modifies the imprint's markup.

--- a/src/Backgesellschaft/WebBundle/Resources/config/routing.yml
+++ b/src/Backgesellschaft/WebBundle/Resources/config/routing.yml
@@ -37,3 +37,10 @@ bg_newsletter_confirmed:
     defaults:
         _controller: FrameworkBundle:Template:template
         template: 'BackgesellschaftWebBundle:Newsletter:activated.html.twig'
+
+bg_contact:
+    path: /kontakt
+    methods: [GET]
+    defaults:
+        _controller: FrameworkBundle:Template:template
+        template: 'BackgesellschaftWebBundle:Static:contact.html.twig'
